Fix spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,19 @@ body {
   width: 9em;
 }
 
+.nav {
+  display: flex;
+}
+
+.nav h1 {
+  margin-right: auto;
+}
+
 .nav ul {
   padding: 0;
   list-style-type: none;
   display: flex;
   align-items: center;
-  margin: auto;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -57,6 +64,11 @@ body {
   text-decoration: none;
 }
 
+.nav a:hover,
+.nav a:focus {
+  outline: 1px solid #fff;
+}
+
 .banner {
   display: grid;
   grid-template-columns: 1fr;
@@ -64,6 +76,7 @@ body {
   grid-template-areas: "banner";
   color: #fff;
   font-size: 1.5rem;
+  background-color: #522806;
 }
 
 .banner img {
@@ -94,6 +107,11 @@ body {
   color: #fff;
   font-weight: bold;
   text-decoration: none;
+}
+
+.banner a:hover,
+.banner a:focus {
+  outline: 1px solid #fff;
 }
 
 .ship {
